2006-06-06  Roman Kennke  <kennke@aicas.com>

	PR 27651
	* javax/swing/JTree.java
	(JTree(TreeModel)): Call updateUI() before setModel().
	(setModel): Don't call updateUI here.

2006-06-06  Lillian Angel  <langel@redhat.com>
	
	* native/plugin/gcjwebplugin.cc:
	Fixed failure message and commenting.
	(NP_Initialize): Added more comments.

2006-06-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JSplitPane.java
	(AccessibleJSplitPane): API doc fixes,
	(setDividerLocation): Likewise,
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Additions to SplitPane.ancestorInputMap,
	* javax/swing/plaf/basic/BasicSplitPaneUI.java
	(getInputMap): New method,
	(getActionMap): New method,
	(createActionMap): New method,
	(installKeyboardActions): Implemented,
	(uninstallKeyboardActions): Implemented.

2006-06-06  Roman Kennke  <kennke@aicas.com>

	PR 27523
	* javax/swing/MenuSelectionManager.java
	(processKeyEvent): Added check to avoid
	ArrayIndexOutOfBoundsException.

2006-06-06  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/javax/swing/text/html/htmlAttributeSet.java
	(getAttributeNames): Rewritten

2006-06-06  Chris Burdess  <dog@gnu.org>

	* gnu/xml/transform/TransformerImpl.java: Check type of created
	  document (more cases).

2006-06-06  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/javax/swing/text/html/htmlAttributeSet.java
	(clone): New method. (copyAttributes): New method.
	(getResolveParent): Comment fix. (getAttribute):
	Rewritten. (addAttribute): Rewritten.
	* gnu/javax/swing/text/html/SmallHtmlAttributeSet.java:
	New file.

2006-06-06  Roman Kennke  <kennke@aicas.com>

	PR 27522
	* javax/swing/JMenuBar.java
	(processKeyBindingHelper): Added null check to prevent NPE.

2006-06-06  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(ShowSystemMenuAction): New class.
	(installKeyboardActions): Implemented.
	(uninstallKeyboardActions): Implemented.